# sms-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sms_ai/: __init__.py  agent.py  cli.py  config.py  db.py  debug.py  glossary.py  language.py  llm.py  main.py  pipeline.py  sms.py  tools.py  twilio_client.py
static/: demo.html
tests/: __init__.py  test_glossary.py  test_smoke.py  test_translation_glossary_integration.py
